--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.195",
+    "@types/luxon": "^3.3.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
@@ -17,6 +18,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
